UPD:Fixed the alignment of faq section in mobile view

--- a/src/Pages/FAQPage/FaqPage.module.scss
+++ b/src/Pages/FAQPage/FaqPage.module.scss
@@ -126,6 +126,8 @@
             width: auto;
             height: 10rem;
         }
+        .faq_wrapper{
+         transform: translate(-1.15rem); 
         .accordion{
             li{
                 margin-left:none;
@@ -137,6 +139,7 @@
                 font-size: 1rem;
             }
         }
+      }
     }
 }
 
